@@ -1,0 +1,2 @@
+# Used un the ressources URL, to enable caching the resources on the client.
+cacheKey=@cacheKey@
