@@ -10,6 +10,7 @@ Changes in Release 1.0.9
 * added russian i18n.
 * added HOWTO Portlet-API (MYFACES/docs/portlet_quick_start.txt)
 * improvements for tree2 component from Sean Schofield
+* added caching to the ExtensionsFilter
 * closed MYFACES-85 in Jira
 * closed MYFACES-96 in Jira (Jason Hoo)
 * closed MYFACES-91 in Jira 
